widgettracker: add script ignore field